<resources>
    <string name="app_name">Iot App</string>
    <string name="ho_chi_minh">Ho Chi Minh</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="cristiano">Cristiano</string>
    <string name="lamp">Room Light</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="tv_lg">TV LG</string>
    <string name="_2_device">2 Device</string>
    <string name="toshiba_ac">Toshiba AC</string>
    <string name="lg_fan">LG Fan</string>
    <string name="main_light">Home Light</string>
    <string name="living_room">Living Room</string>
    <string name="notify">Notify</string>
    <string name="add">Add</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="out_door">Outdoor</string>
    <string name="bed_room">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="outdoor">Outdoor</string>
    <string name="bedroom">Bedroom</string>
    <string name="cctv">CCTV</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="log_out">log out</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="_25_c">25°C</string>
    <string name="_50">50%</string>
    <string name="visualize">Visualize</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="image_description">Image description</string>
    <string name="device_s_name">Device\'s name</string>
    <string name="device_s_time">Device\'s time</string>
    <string name="welcome_to_iot_system_group_3">Welcome to Iot System Group 3</string>
    <string name="member_1_l_m_b_o_duy">Member 1: Lâm Bảo Duy</string>
    <string name="member_2_tr_n_l_thanh_duy">Member 2: Trần Lý Thanh Duy</string>
    <string name="member_3_ho_ng_nh_t_anh_d_ng">Member 3: Hoàng Nhật Anh Dũng</string>
    <string name="devices_control">Devices Control</string>
    <string name="group_img">group_img</string>
    <string name="light1_img">light1_img</string>
    <string name="light2_img">light2_img</string>
    <string name="temperature_chart">Temperature Chart</string>
    <string name="humidity_chart">Humidity Chart</string>
    <string name="light_chart">Light Chart</string>
    <string name="time_and_status">Time and Status</string>
    <string name="device_name">Device Name</string>
    <string name="image_device">Image Device</string>
    <string name="system_log">System Log</string>
    <string name="temperature_room">Temperature Room</string>
    <string name="next">next</string>
    <string name="devices">Devices</string>
    <string name="humidity_room">Humidity Room</string>
    <string name="light_room">Light Room</string>
    <string name="light_1">Light 1</string>
    <string name="light_2">Light 2</string>
    <string name="_14_30_30_04_1975">14:30 30-04-1975</string>
    <string name="_30">30%</string>
    <string name="_123456">123456</string>
    <string name="id">ID:</string>
    <string name="_192_168_1_2">192.168.1.2</string>
    <string name="wemos_d1">Wemos D1</string>
    <string name="main">Main</string>
    <string name="chart">Chart</string>
    <string name="log">Log</string>
    <string name="ai">AI</string>
    <string name="background_ai_screen">background_ai_screen</string>
    <string name="ai_internet_of_things">AI INTERNET OF THINGS</string>
    <string name="enter_temperature">Enter temperature</string>
    <string name="enter_humidity">Enter humidity [0,1]</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_0_km_h">0 km/h</string>
    <string name="call_wind_speed">Call Wind Speed</string>
</resources>