<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="iot.baoduy.iotapp.Fragment.Dashboard.DashBoardFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_to_iot_system_group_3"
        android:textColor="@color/light_blue"
        android:padding="4dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="12dp"
        android:src="@drawable/iot"
        android:contentDescription="@string/image_description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/member_1_l_m_b_o_duy"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/member_2_tr_n_l_thanh_duy"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/member_3_ho_ng_nh_t_anh_d_ng"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/devices_control"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="4dp"
        android:layout_marginBottom="80dp"
        app:cardCornerRadius="20dp">

        <ListView
            android:id="@+id/list_view_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:listSelector="@drawable/item"/>
    </androidx.cardview.widget.CardView>


</LinearLayout>