<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="iot.baoduy.iotapp.Fragment.AI.AIFragment">

    <!-- Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_internet_of_things"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#567B99"
        android:padding="16dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/background_ai_img"
        android:contentDescription="@string/background_ai_screen"
        />

    <!-- Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="16dp"/>

            <EditText
                android:autofillHints="23"
                android:inputType="none"
                android:id="@+id/et_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_temperature"
                android:padding="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="16dp"/>

            <EditText
                android:autofillHints="70"
                android:inputType="none"
                android:id="@+id/et_humi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="32dp"
                android:hint="@string/enter_humidity"
                android:padding="16dp"/>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_ai"
            app:backgroundTint="@color/white"
            app:elevation="16dp"
            app:fabSize="normal"
            android:contentDescription="@string/call_wind_speed" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:layout_gravity="center"
            android:textColor="#567B99"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:padding="16dp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/windSpeedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_km_h"
                    android:layout_marginStart="24dp"
                    android:textSize="18sp"
                    android:padding="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>